binding_generator/firm_headers/libfirm/tv.h


FIRM_API ir_tarval *new_tarval_from_str(const char *str, size_t len,
                                        ir_mode *mode);
FIRM_API ir_tarval *new_integer_tarval_from_str(const char *str, size_t len,
                                                char sign, unsigned char base,
                                                ir_mode *mode);
FIRM_API ir_tarval *new_tarval_from_long(long l, ir_mode *mode);
FIRM_API long get_tarval_long(ir_tarval *tv);
FIRM_API int tarval_is_long(ir_tarval *tv);
FIRM_API ir_tarval *new_tarval_from_double(long double d, ir_mode *mode);
FIRM_API long double get_tarval_double(ir_tarval *tv);
FIRM_API int tarval_is_double(ir_tarval *tv);
FIRM_API ir_mode *get_tarval_mode(const ir_tarval *tv);
FIRM_API int tarval_is_negative(ir_tarval *tv);
FIRM_API int tarval_is_null(ir_tarval *tv);
FIRM_API int tarval_is_one(ir_tarval *tv);
FIRM_API int tarval_is_minus_one(ir_tarval *tv);
FIRM_API int tarval_is_all_one(ir_tarval *tv);
FIRM_API int tarval_is_constant(ir_tarval *tv);
FIRM_API ir_tarval *get_tarval_bad(void);
FIRM_API ir_tarval *get_tarval_undefined(void);
FIRM_API ir_tarval *get_tarval_b_false(void);
FIRM_API ir_tarval *get_tarval_b_true(void);
FIRM_API ir_tarval *get_tarval_unreachable(void);
FIRM_API ir_tarval *get_tarval_reachable(void);
FIRM_API ir_tarval *get_tarval_max(ir_mode *mode);
FIRM_API ir_tarval *get_tarval_min(ir_mode *mode);
FIRM_API ir_tarval *get_tarval_null(ir_mode *mode);
FIRM_API ir_tarval *get_tarval_one(ir_mode *mode);
FIRM_API ir_tarval *get_tarval_minus_one(ir_mode *mode);
FIRM_API ir_tarval *get_tarval_all_one(ir_mode *mode);
FIRM_API ir_tarval *get_tarval_nan(ir_mode *mode);
FIRM_API ir_tarval *get_tarval_plus_inf(ir_mode *mode);
FIRM_API ir_tarval *get_tarval_minus_inf(ir_mode *mode);
typedef enum tarval_int_overflow_mode_t {
	TV_OVERFLOW_BAD,      
	TV_OVERFLOW_WRAP,     
	TV_OVERFLOW_SATURATE  
} tarval_int_overflow_mode_t;
FIRM_API void tarval_set_integer_overflow_mode(tarval_int_overflow_mode_t ov_mode);
FIRM_API tarval_int_overflow_mode_t tarval_get_integer_overflow_mode(void);
FIRM_API pn_Cmp tarval_cmp(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_convert_to(ir_tarval *src, ir_mode *mode);
FIRM_API ir_tarval *tarval_not(ir_tarval *a);
FIRM_API ir_tarval *tarval_neg(ir_tarval *a);
FIRM_API ir_tarval *tarval_add(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_sub(ir_tarval *a, ir_tarval *b, ir_mode *dst_mode);
FIRM_API ir_tarval *tarval_mul(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_quo(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_div(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_mod(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_divmod(ir_tarval *a, ir_tarval *b, ir_tarval **mod_res);
FIRM_API ir_tarval *tarval_abs(ir_tarval *a);
FIRM_API ir_tarval *tarval_and(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_andnot(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_or(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_eor(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_shl(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_shr(ir_tarval *a, ir_tarval *b);
FIRM_API ir_tarval *tarval_shrs(ir_tarval *a, ir_tarval *b);
typedef enum {
	TVO_NATIVE,       
	TVO_HEX,          
	TVO_DECIMAL,      
	TVO_OCTAL,        
	TVO_BINARY,       
	TVO_FLOAT,        
	TVO_HEXFLOAT      
} tv_output_mode;