src/firm/bindings/binding_tv.java


	public static enum pn_Cmp {
		pn_Cmp_False(0),
		pn_Cmp_Eq(1),
		pn_Cmp_Lt(2),
		pn_Cmp_Le((pn_Cmp.pn_Cmp_Eq.val | pn_Cmp.pn_Cmp_Lt.val)),
		pn_Cmp_Gt(4),
		pn_Cmp_Ge((pn_Cmp.pn_Cmp_Eq.val | pn_Cmp.pn_Cmp_Gt.val)),
		pn_Cmp_Lg((pn_Cmp.pn_Cmp_Lt.val | pn_Cmp.pn_Cmp_Gt.val)),
		pn_Cmp_Leg(((pn_Cmp.pn_Cmp_Lt.val | pn_Cmp.pn_Cmp_Eq.val) | pn_Cmp.pn_Cmp_Gt.val)),
		pn_Cmp_Uo(8),
		pn_Cmp_Ue((pn_Cmp.pn_Cmp_Uo.val | pn_Cmp.pn_Cmp_Eq.val)),
		pn_Cmp_Ul((pn_Cmp.pn_Cmp_Uo.val | pn_Cmp.pn_Cmp_Lt.val)),
		pn_Cmp_Ule(((pn_Cmp.pn_Cmp_Uo.val | pn_Cmp.pn_Cmp_Lt.val) | pn_Cmp.pn_Cmp_Eq.val)),
		pn_Cmp_Ug((pn_Cmp.pn_Cmp_Uo.val | pn_Cmp.pn_Cmp_Gt.val)),
		pn_Cmp_Uge(((pn_Cmp.pn_Cmp_Uo.val | pn_Cmp.pn_Cmp_Gt.val) | pn_Cmp.pn_Cmp_Eq.val)),
		pn_Cmp_Ne(((pn_Cmp.pn_Cmp_Uo.val | pn_Cmp.pn_Cmp_Lt.val) | pn_Cmp.pn_Cmp_Gt.val)),
		pn_Cmp_True(15),
		pn_Cmp_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_Cmp(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_Cmp() {
			this.val = C.next_val++;
		}

		public static pn_Cmp getEnum(int val) {
			for (pn_Cmp entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum pn_Cond {
		pn_Cond_false(),
		pn_Cond_true(),
		pn_Cond_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_Cond(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_Cond() {
			this.val = C.next_val++;
		}

		public static pn_Cond getEnum(int val) {
			for (pn_Cond entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum pn_CopyB {
		pn_CopyB_M(pn_generic.pn_Generic_M.val),
		pn_CopyB_X_regular(pn_generic.pn_Generic_X_regular.val),
		pn_CopyB_X_except(pn_generic.pn_Generic_X_except.val),
		pn_CopyB_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_CopyB(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_CopyB() {
			this.val = C.next_val++;
		}

		public static pn_CopyB getEnum(int val) {
			for (pn_CopyB entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum pn_Div {
		pn_Div_M(pn_generic.pn_Generic_M.val),
		pn_Div_X_regular(pn_generic.pn_Generic_X_regular.val),
		pn_Div_X_except(pn_generic.pn_Generic_X_except.val),
		pn_Div_res(pn_generic.pn_Generic_other.val),
		pn_Div_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_Div(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_Div() {
			this.val = C.next_val++;
		}

		public static pn_Div getEnum(int val) {
			for (pn_Div entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum pn_DivMod {
		pn_DivMod_M(pn_generic.pn_Generic_M.val),
		pn_DivMod_X_regular(pn_generic.pn_Generic_X_regular.val),
		pn_DivMod_X_except(pn_generic.pn_Generic_X_except.val),
		pn_DivMod_res_div(pn_generic.pn_Generic_other.val),
		pn_DivMod_res_mod(),
		pn_DivMod_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_DivMod(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_DivMod() {
			this.val = C.next_val++;
		}

		public static pn_DivMod getEnum(int val) {
			for (pn_DivMod entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum pn_InstOf {
		pn_InstOf_M(pn_generic.pn_Generic_M.val),
		pn_InstOf_X_regular(pn_generic.pn_Generic_X_regular.val),
		pn_InstOf_X_except(pn_generic.pn_Generic_X_except.val),
		pn_InstOf_res(pn_generic.pn_Generic_other.val),
		pn_InstOf_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_InstOf(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_InstOf() {
			this.val = C.next_val++;
		}

		public static pn_InstOf getEnum(int val) {
			for (pn_InstOf entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum pn_Load {
		pn_Load_M(pn_generic.pn_Generic_M.val),
		pn_Load_X_regular(pn_generic.pn_Generic_X_regular.val),
		pn_Load_X_except(pn_generic.pn_Generic_X_except.val),
		pn_Load_res(pn_generic.pn_Generic_other.val),
		pn_Load_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_Load(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_Load() {
			this.val = C.next_val++;
		}

		public static pn_Load getEnum(int val) {
			for (pn_Load entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum pn_Mod {
		pn_Mod_M(pn_generic.pn_Generic_M.val),
		pn_Mod_X_regular(pn_generic.pn_Generic_X_regular.val),
		pn_Mod_X_except(pn_generic.pn_Generic_X_except.val),
		pn_Mod_res(pn_generic.pn_Generic_other.val),
		pn_Mod_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_Mod(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_Mod() {
			this.val = C.next_val++;
		}

		public static pn_Mod getEnum(int val) {
			for (pn_Mod entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum pn_Quot {
		pn_Quot_M(pn_generic.pn_Generic_M.val),
		pn_Quot_X_regular(pn_generic.pn_Generic_X_regular.val),
		pn_Quot_X_except(pn_generic.pn_Generic_X_except.val),
		pn_Quot_res(pn_generic.pn_Generic_other.val),
		pn_Quot_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_Quot(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_Quot() {
			this.val = C.next_val++;
		}

		public static pn_Quot getEnum(int val) {
			for (pn_Quot entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum pn_Raise {
		pn_Raise_M(pn_generic.pn_Generic_M.val),
		pn_Raise_X(pn_generic.pn_Generic_X_regular.val),
		pn_Raise_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_Raise(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_Raise() {
			this.val = C.next_val++;
		}

		public static pn_Raise getEnum(int val) {
			for (pn_Raise entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum pn_Start {
		pn_Start_X_initial_exec(),
		pn_Start_M(),
		pn_Start_P_frame_base(),
		pn_Start_P_tls(),
		pn_Start_T_args(),
		pn_Start_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_Start(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_Start() {
			this.val = C.next_val++;
		}

		public static pn_Start getEnum(int val) {
			for (pn_Start entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum pn_Store {
		pn_Store_M(pn_generic.pn_Generic_M.val),
		pn_Store_X_regular(pn_generic.pn_Generic_X_regular.val),
		pn_Store_X_except(pn_generic.pn_Generic_X_except.val),
		pn_Store_max();
		public final int val;

		private static class C {
			static int next_val;
		}

		pn_Store(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		pn_Store() {
			this.val = C.next_val++;
		}

		public static pn_Store getEnum(int val) {
			for (pn_Store entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum tarval_int_overflow_mode_t {
		TV_OVERFLOW_BAD(),
		TV_OVERFLOW_WRAP(),
		TV_OVERFLOW_SATURATE();
		public final int val;

		private static class C {
			static int next_val;
		}

		tarval_int_overflow_mode_t(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		tarval_int_overflow_mode_t() {
			this.val = C.next_val++;
		}

		public static tarval_int_overflow_mode_t getEnum(int val) {
			for (tarval_int_overflow_mode_t entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}

	public static enum tv_output_mode {
		TVO_NATIVE(),
		TVO_HEX(),
		TVO_DECIMAL(),
		TVO_OCTAL(),
		TVO_BINARY(),
		TVO_FLOAT(),
		TVO_HEXFLOAT();
		public final int val;

		private static class C {
			static int next_val;
		}

		tv_output_mode(int val) {
			this.val = val;
			C.next_val = val + 1;
		}

		tv_output_mode() {
			this.val = C.next_val++;
		}

		public static tv_output_mode getEnum(int val) {
			for (tv_output_mode entry : values()) {
				if (val == entry.val)
					return entry;
			}
			return null;
		}
	}


	public static native Pointer new_tarval_from_str(String str, com.sun.jna.NativeLong len, Pointer mode);

	public static native Pointer new_integer_tarval_from_str(String str, com.sun.jna.NativeLong len, byte sign, byte base, Pointer mode);

	public static native Pointer new_tarval_from_long(com.sun.jna.NativeLong l, Pointer mode);

	public static native com.sun.jna.NativeLong get_tarval_long(Pointer tv);

	public static native int tarval_is_long(Pointer tv);

	public static native Pointer new_tarval_from_double(double d, Pointer mode);

	public static native double get_tarval_double(Pointer tv);

	public static native int tarval_is_double(Pointer tv);

	public static native Pointer get_tarval_mode(Pointer tv);

	public static native int tarval_is_negative(Pointer tv);

	public static native int tarval_is_null(Pointer tv);

	public static native int tarval_is_one(Pointer tv);

	public static native int tarval_is_minus_one(Pointer tv);

	public static native int tarval_is_all_one(Pointer tv);

	public static native int tarval_is_constant(Pointer tv);

	public static native Pointer get_tarval_bad();

	public static native Pointer get_tarval_undefined();

	public static native Pointer get_tarval_b_false();

	public static native Pointer get_tarval_b_true();

	public static native Pointer get_tarval_unreachable();

	public static native Pointer get_tarval_reachable();

	public static native Pointer get_tarval_max(Pointer mode);

	public static native Pointer get_tarval_min(Pointer mode);

	public static native Pointer get_tarval_null(Pointer mode);

	public static native Pointer get_tarval_one(Pointer mode);

	public static native Pointer get_tarval_minus_one(Pointer mode);

	public static native Pointer get_tarval_all_one(Pointer mode);

	public static native Pointer get_tarval_nan(Pointer mode);

	public static native Pointer get_tarval_plus_inf(Pointer mode);

	public static native Pointer get_tarval_minus_inf(Pointer mode);

	public static native void tarval_set_integer_overflow_mode(/* tarval_int_overflow_mode_t */int ov_mode);

	public static native /* tarval_int_overflow_mode_t */int tarval_get_integer_overflow_mode();

	public static native /* pn_Cmp */int tarval_cmp(Pointer a, Pointer b);

	public static native Pointer tarval_convert_to(Pointer src, Pointer mode);

	public static native Pointer tarval_not(Pointer a);

	public static native Pointer tarval_neg(Pointer a);

	public static native Pointer tarval_add(Pointer a, Pointer b);

	public static native Pointer tarval_sub(Pointer a, Pointer b, Pointer dst_mode);

	public static native Pointer tarval_mul(Pointer a, Pointer b);

	public static native Pointer tarval_quo(Pointer a, Pointer b);

	public static native Pointer tarval_div(Pointer a, Pointer b);

	public static native Pointer tarval_mod(Pointer a, Pointer b);

	public static native Pointer tarval_divmod(Pointer a, Pointer b, java.nio.Buffer mod_res);

	public static native Pointer tarval_abs(Pointer a);

	public static native Pointer tarval_and(Pointer a, Pointer b);

	public static native Pointer tarval_andnot(Pointer a, Pointer b);

	public static native Pointer tarval_or(Pointer a, Pointer b);

	public static native Pointer tarval_eor(Pointer a, Pointer b);

	public static native Pointer tarval_shl(Pointer a, Pointer b);

	public static native Pointer tarval_shr(Pointer a, Pointer b);

	public static native Pointer tarval_shrs(Pointer a, Pointer b);
